# SFP-Simulatie

./: .gitignore  README.md  point_in_circle.py  start_program.sh
.github/workflows/: MicrosoftTeams.yml  main.yml
BoomSim/: LSystemTreeTest1.py  LSystemTreeTest2.py  Rules.py  main.py
BoomSim/examples/: 3DRecursionTree.py  3dplottest.py  DrawTreeExample.py  Maintest1recursion.py  RecursionTree.py  RecursionTree2.py  cursor.py
Boomgaard simulatie/: .gitignore
Docs/: install.txt  notes.md  tutorials.md
ROS-Sim/: .gitignore
ROS/catkin_ws/src/hello_world/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/hello_world/config/: params.yaml
ROS/catkin_ws/src/hello_world/launch/: send_joints.launch
ROS/catkin_ws/src/hello_world/msg/: UR10eJoints.msg  UR10eMoveitJoints.msg
ROS/catkin_ws/src/hello_world/scripts/: MoveJoints.py  Publisher.py  Subscriber.py  server_endpoint.py
SpaceColonizationSim2D/: main.py
SpaceColonizationSim2D/GUI/: GUI.py
SpaceColonizationSim2D/Parts/: branch.py  leaf.py  tree.py
SpaceColonizationSim3D/: DesktopApplication.py  GenerateSphereFromPoint.py  Main.py  ProcessManager.py  RotationTest.py  ShowModel.py  TestWith3Dbutton.py  generation_todo.txt  main.py  makePointcloudSmaller.py  meshLabTest.py  meshLabTest2.py  random_test.py  test.py  testWithThickness.py
SpaceColonizationSim3D/GUI/: GUI.py
SpaceColonizationSim3D/Parts/: branch.py  leaf.py  pear.py  tree.py
SpaceColonizationSim3D/Utils/: Process.py  thread.py
xyz/: default.xyz  default1.xyz  default2.xyz  default3.xyz  default4.xyz  default5.xyz
(+267 files in other folders)
